# Custom-Neural-Network

./: .gitignore  justfile  main.py  mlhw7.md  mlhw7_marimo.py  pyproject.toml
.claude/: settings.local.json
__marimo__/: mlhw7_marimo.html
__marimo__/session/: mlhw7_marimo.py.json
