[project]
name = "mlhw7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "marimo[mcp]>=0.22.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "plotly>=6.6.0",
    "pydantic-ai>=1.75.0",
    "ruff>=0.15.8",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[project.scripts]
dev = "mlhw7_marimo:main"
